@@ -1,3 +1,7 @@
+2012-07-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-12-04
+        * Mods to allow extended PPrStabilityMon to run on Tier0.
+
 2012-07-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-12-03
         * Use explicit CLHEP namespace.
